--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -52,11 +52,11 @@
                             <div class="main-menu d-none d-md-block">
                                 <nav>                  
                                     <ul id="navigation">    
-                                        <li><a routerlLink="/home">Home</a></li>
-                                        <li><a routerlLink="/categories">Category</a></li>
-                                        <li><a routerlLink="/about">About</a></li>
-                                        <li><a routerlLink="/latest">Latest News</a></li>
-                                        <li><a routerlLink="/contact">Contact</a></li>
+                                        <li><a routerLink="/home">Home</a></li>
+                                        <li><a routerLink="/categories">Category</a></li>
+                                        <li><a routerLink="/about">About</a></li>
+                                        <li><a routerLink="/latest">Latest News</a></li>
+                                        <li><a routerLink="/contact">Contact</a></li>
                                         <li><a href="#">Pages</a>
                                             <ul class="submenu">
                                                 <li><a href="elements.html">Element</a></li>
