--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -53,7 +53,7 @@
                                 <nav>                  
                                     <ul id="navigation">    
                                         <li><a routerLink="/home">Home</a></li>
-                                        <li><a routerLink="/categories">Category</a></li>
+                                        <li><a routerLink="/category">Category</a></li>
                                         <li><a routerLink="/about">About</a></li>
                                         <li><a routerLink="/latest">Latest News</a></li>
                                         <li><a routerLink="/contact">Contact</a></li>
